--- a/MyChatServer/MyChatServer/app.config
+++ b/MyChatServer/MyChatServer/app.config
@@ -5,7 +5,11 @@
             <section name="MyChatServer.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
     </configSections>
-    <connectionStrings/>
+    <connectionStrings>
+        <add name="MyChatServer.Properties.Settings.ChatServerConnectionString"
+            connectionString="Data Source=.;Initial Catalog=ChatServer;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <userSettings>
         <MyChatServer.Properties.Settings>
             <setting name="logFile" serializeAs="String">
