--- a/MyChatServer/MyChatServer/app.config
+++ b/MyChatServer/MyChatServer/app.config
@@ -12,9 +12,6 @@
     </connectionStrings>
     <userSettings>
         <MyChatServer.Properties.Settings>
-            <setting name="logFile" serializeAs="String">
-                <value>MyChatServer.log</value>
-            </setting>
             <setting name="Port" serializeAs="String">
                 <value>6614</value>
             </setting>
@@ -23,4 +20,10 @@
             </setting>
         </MyChatServer.Properties.Settings>
     </userSettings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
+  <appSettings>
+    <add key="log4net.Config" value="log4net.config" />
+  </appSettings>
+<startup>
+  <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
+</startup>
+</configuration>
