[minor] fix namespace

--- a/MyChatServer/MyChatServer/MyChatServer.csproj
+++ b/MyChatServer/MyChatServer/MyChatServer.csproj
@@ -100,9 +100,9 @@
     <Compile Include="..\..\_Common\src\Crypto\CryptoCmn.cs">
       <Link>Crypto\CryptoCmn.cs</Link>
     </Compile>
-    <Compile Include="Data\DataGetter.cs" />
-    <Compile Include="Data\MSSQLDataGetter.cs" />
-    <Compile Include="Data\PredefinedDataGetter.cs" />
+    <Compile Include="DAL\DataGetter.cs" />
+    <Compile Include="DAL\MSSQLDataGetter.cs" />
+    <Compile Include="DAL\PredefinedDataGetter.cs" />
     <Compile Include="LogForm.cs">
       <SubType>Form</SubType>
     </Compile>
