--- a/MyChatServerLibrary/MyChatServerLibrary.csproj
+++ b/MyChatServerLibrary/MyChatServerLibrary.csproj
@@ -65,6 +65,7 @@
     <Compile Include="ChatClient.cs" />
     <Compile Include="ChatServer.cs" />
     <Compile Include="Consts.cs" />
+    <Compile Include="Credentials.cs" />
     <Compile Include="Crypto\Utils.cs" />
     <Compile Include="DAL\DataContext.cs" />
     <Compile Include="DAL\IDataContext.cs" />
