--- a/MyChatServerLibrary/MyChatServerLibrary.csproj
+++ b/MyChatServerLibrary/MyChatServerLibrary.csproj
@@ -59,12 +59,10 @@
     <Compile Include="..\_common\src\crypto\ECDSAWrapper.cs">
       <Link>Crypto\ECDSAWrapper.cs</Link>
     </Compile>
-    <Compile Include="..\_common\src\formatting\HexRep.cs">
-      <Link>Formatting\HexRep.cs</Link>
-    </Compile>
     <Compile Include="ChatClient.cs" />
     <Compile Include="ChatServer.cs" />
     <Compile Include="Consts.cs" />
+    <Compile Include="ConvertUtils.cs" />
     <Compile Include="Credentials.cs" />
     <Compile Include="Crypto\Utils.cs" />
     <Compile Include="DAL\DataContext.cs" />
@@ -76,6 +74,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Formatting\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
