--- a/MyChatServerLibrary/MyChatServerLibrary.csproj
+++ b/MyChatServerLibrary/MyChatServerLibrary.csproj
@@ -68,7 +68,10 @@
     <Compile Include="DAL\DataContext.cs" />
     <Compile Include="DAL\IDataContext.cs" />
     <Compile Include="DAL\MemoryDataContext.cs" />
+    <Compile Include="IServer.cs" />
+    <Compile Include="Message.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RoomMessage.cs" />
     <Compile Include="RoomParams.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
