--- a/MyChatServerLibrary/MyChatServerLibrary.csproj
+++ b/MyChatServerLibrary/MyChatServerLibrary.csproj
@@ -68,6 +68,7 @@
     <Compile Include="DAL\DataContext.cs" />
     <Compile Include="DAL\IDataContext.cs" />
     <Compile Include="DAL\MemoryDataContext.cs" />
+    <Compile Include="Formatting\BinaryFormatter.cs" />
     <Compile Include="IServer.cs" />
     <Compile Include="Message.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -78,9 +79,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Formatting\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
