--- a/MyChatServerLibrary.Tests/MyChat.Server.Core.Tests.csproj
+++ b/MyChatServerLibrary.Tests/MyChat.Server.Core.Tests.csproj
@@ -48,9 +48,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MyChatServerLibrary\MyChatServerLibrary.csproj">
+    <ProjectReference Include="..\MyChatServerLibrary\MyChat.Server.Core.csproj">
       <Project>{937810c7-d05c-48b3-99b6-0d04957ea422}</Project>
-      <Name>MyChatServerLibrary</Name>
+      <Name>MyChat.Server.Core</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
