--- a/MyChatClient/MyChat/MyChat.Client.WinFormsApp.csproj
+++ b/MyChatClient/MyChat/MyChat.Client.WinFormsApp.csproj
@@ -78,18 +78,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="src\ChatClient.cs" />
     <Compile Include="ChatForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="ChatForm.Designer.cs">
       <DependentUpon>ChatForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="src\Crypto\AESCSPImpl.cs" />
-    <Compile Include="src\Crypto\ECDHWrapper.cs" />
-    <Compile Include="src\Crypto\ECDSAWrapper.cs" />
-    <Compile Include="src\Exceptions.cs" />
-    <Compile Include="src\HexRep.cs" />
     <Compile Include="LogonForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -98,8 +92,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="src\ListenProcessor.cs" />
-    <Compile Include="src\MsgProcessor.cs" />
     <EmbeddedResource Include="ChatForm.resx">
       <DependentUpon>ChatForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -156,6 +148,12 @@
       <ProductName>Windows Installer 3.1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\MyChat.Client.Core\MyChat.Client.Core.csproj">
+      <Project>{3add4ed4-8d9e-4c45-88d9-699bb744d829}</Project>
+      <Name>MyChat.Client.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
