Added LibLog logging to some places

--- a/MyChat.Common/MyChat.Common.csproj
+++ b/MyChat.Common/MyChat.Common.csproj
@@ -19,7 +19,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;LIBLOG_PUBLIC</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Packages\LibLog.4.2\LibLog.cs" />
     <Compile Include="Crypto\AESCSPImpl.cs" />
     <Compile Include="Crypto\AESMngdImpl.cs" />
     <Compile Include="Crypto\AesWrapper.cs" />
