--- a/MyChatServer/MyChatServer/MyChat.Server.WinFormsApp.csproj
+++ b/MyChatServer/MyChatServer/MyChat.Server.WinFormsApp.csproj
@@ -68,6 +68,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\packages\log4net.2.0.2\lib\net40-full\log4net.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
