Some tests along the way

--- a/MyChat.Common.Tests/MyChat.Common.Tests.csproj
+++ b/MyChat.Common.Tests/MyChat.Common.Tests.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ModelsTests.cs" />
+    <Compile Include="NetworkTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
