--- a/MyChat.Common.Tests/MyChat.Common.Tests.csproj
+++ b/MyChat.Common.Tests/MyChat.Common.Tests.csproj
@@ -48,6 +48,7 @@
     <Compile Include="ModelsTests.cs" />
     <Compile Include="NetworkTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UtilsTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
