--- a/MyChat.Common/MyChat.Common.csproj
+++ b/MyChat.Common/MyChat.Common.csproj
@@ -45,22 +45,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AbstractMessage.cs" />
     <Compile Include="App_Packages\LibLog.4.2\LibLog.cs" />
     <Compile Include="Crypto\AesManagedCryptor.cs" />
     <Compile Include="Crypto\CryptoCmn.cs" />
     <Compile Include="Crypto\ECDHWrapper.cs" />
     <Compile Include="Crypto\ECDSAWrapper.cs" />
     <Compile Include="Crypto\IDataCryptor.cs" />
+    <Compile Include="IMessageVisitor.cs" />
+    <Compile Include="MessageDeserializingVisitor.cs" />
+    <Compile Include="Models\ChatRoomDto.cs" />
     <Compile Include="Models\Messages\LogonCredentials.cs" />
+    <Compile Include="Models\Messages\Request.cs" />
+    <Compile Include="Models\Messages\Response.cs" />
     <Compile Include="Models\Messages\ServiceMessage.cs" />
     <Compile Include="Models\Messages\ChatMessage.cs" />
     <Compile Include="Models\Messages\MessageType.cs" />
     <Compile Include="Models\Messages\ServiceMessageResponse.cs" />
+    <Compile Include="Models\Messages\SuperServiceMessage.cs" />
     <Compile Include="Network\CryptoProtocol.cs" />
     <Compile Include="Network\IStreamWrapper.cs" />
     <Compile Include="Network\FramedProtocol.cs" />
     <Compile Include="PacketProtocol.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="MessageSerializingVisitor.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
